--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -858,7 +858,7 @@ if (compare(hash, digest, 16) == 0) {
 \end{verbatim}
 \end{small}
 
-\subsection{Init \& Collect}
+\subsection{Init und Collect}
 
 \subsubsection{Init}
 
